// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Multiselect.vue > matches invalid prop 1`] = `
"<div data-v-2541a05b="" data-id="sds-multiselect" class="sds-multiselect invalid canSearch">
  <ul data-v-2541a05b="" class="tag-list single">
    <li data-v-2541a05b="" style="width: 0px;" class="tag-list-item input"><span data-v-2541a05b="" class="faux-input" aria-hidden="true"></span>
      <!--v-if--><label data-v-2541a05b=""><input data-v-2541a05b="" placeholder="" style="width: 0px;" autocomplete="off" spellcheck="false" autocorrect="off" type="text" class="p-0 m-0 border-0 focus:shadow-none focus:ring-0" value=""><span data-v-2541a05b="" class="sr-only">Enter text</span></label>
    </li>
  </ul>
  <!--v-if-->
  <div data-v-2541a05b="" aria-hidden="true" class="multiselect-caret"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Multiselect.vue > matches snapshot with no props assigned 1`] = `
"<div data-v-2541a05b="" data-id="sds-multiselect" class="sds-multiselect canSearch">
  <ul data-v-2541a05b="" class="tag-list single">
    <li data-v-2541a05b="" style="width: 0px;" class="tag-list-item input"><span data-v-2541a05b="" class="faux-input" aria-hidden="true"></span>
      <!--v-if--><label data-v-2541a05b=""><input data-v-2541a05b="" placeholder="" style="width: 0px;" autocomplete="off" spellcheck="false" autocorrect="off" type="text" class="p-0 m-0 border-0 focus:shadow-none focus:ring-0" value=""><span data-v-2541a05b="" class="sr-only">Enter text</span></label>
    </li>
  </ul>
  <!--v-if-->
  <div data-v-2541a05b="" aria-hidden="true" class="multiselect-caret"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Multiselect.vue > matches valid prop 1`] = `
"<div data-v-2541a05b="" data-id="sds-multiselect" class="sds-multiselect valid canSearch">
  <ul data-v-2541a05b="" class="tag-list single">
    <li data-v-2541a05b="" style="width: 0px;" class="tag-list-item input"><span data-v-2541a05b="" class="faux-input" aria-hidden="true"></span>
      <!--v-if--><label data-v-2541a05b=""><input data-v-2541a05b="" placeholder="" style="width: 0px;" autocomplete="off" spellcheck="false" autocorrect="off" type="text" class="p-0 m-0 border-0 focus:shadow-none focus:ring-0" value=""><span data-v-2541a05b="" class="sr-only">Enter text</span></label>
    </li>
  </ul>
  <!--v-if-->
  <div data-v-2541a05b="" aria-hidden="true" class="multiselect-caret"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;
